--- a/package.json
+++ b/package.json
@@ -1,22 +1,24 @@
 {
-  "name": "my-blog",
-  "type": "module",
-  "version": "0.0.1",
-  "scripts": {
-    "dev": "astro dev",
-    "start": "astro dev",
-    "build": "astro check && astro build",
-    "preview": "astro preview",
-    "astro": "astro"
-  },
-  "dependencies": {
-    "@astrojs/check": "^0.9.2",
-    "@astrojs/tailwind": "^5.1.0",
-    "astro": "^4.13.4",
-    "typescript": "^5.5.4"
-  },
-  "devDependencies": {
-    "@tailwindcss/typography": "^0.5.14",
-    "tailwindcss": "^3.4.10"
-  }
+    "name": "my-blog",
+    "type": "module",
+    "version": "0.0.1",
+    "scripts": {
+        "dev": "astro dev",
+        "start": "astro dev",
+        "build": "astro check && astro build",
+        "preview": "astro preview",
+        "astro": "astro",
+        "prettier": "prettier . --write"
+    },
+    "dependencies": {
+        "@astrojs/check": "^0.9.2",
+        "@astrojs/tailwind": "^5.1.0",
+        "astro": "^4.13.4",
+        "typescript": "^5.5.4"
+    },
+    "devDependencies": {
+        "@tailwindcss/typography": "^0.5.14",
+        "prettier": "3.3.3",
+        "tailwindcss": "^3.4.10"
+    }
 }
